[package]
name = "xenon_ast"
version = "0.1.0-alpha-0"
authors = ["Liam Greenway <liamgr33nway@gmail.com>"]
edition = "2024"
rust-version = "1.87.0"
repository = "https://github.com/xenonlanguage/xenonc"
description = "The Xenon compiler's AST representation"
homepage = "https://xenonlanguage.github.io"
license = "MPL-2.0"
keywords = ["xenon", "language", "ast", "programming"]
categories = ["parsing", "parser-implementations"]

[dependencies]
either = "1.15.0"
