[package]
name = "xenon-lexer"
version = "0.3.0-alpha-0"
authors = ["Liam Greenway <liamgr33nway@gmail.com>"]
edition = "2024"
rust-version = "1.87.0"
repository = "https://github.com/xenonlanguage/xenonc"
description = "The Xenon compiler's lexer"
homepage = "https://xenonlanguage.github.io"
license = "MPL-2.0"
keywords = ["xenon", "language", "lexer", "programming"]
categories = ["text-processing"]